--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
     <div class="header">
         <img id="tentacles" src="assets/tentacles.png">
         <h1 class="header-text">Sea Monster Crowdfunding</h1>
+        <div class="search-bar-container">
+            <input type="text" id="search" placeholder="Search for a game...">
+        </div>
+
     </div>
 
     <!-- background info about company -->
@@ -18,6 +22,7 @@
     <div id="description-container">
         <p>The purpose of our company is to fund independent games. We've been in operation for 12 years.</p>
     </div>
+    
 
     <!-- top games & other interesting stats -->
     <h2>Stats</h2>
@@ -58,6 +63,7 @@
     <div id="games-container">
 
     </div>
+    
 
     <script type="module" src="index.js"></script>
   </body>
